Completed the 2nd task

--- a/part2/part2/app/src/main/res/values/strings.xml
+++ b/part2/part2/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">part2</string>
+    <string name="todo">button</string>
+    <string name="coursec">Course Code:</string>
+    <string name="coursen">Course Name:</string>
+    <string name="lecturern">Lecturer Name:</string>
+    <string name="name">Name</string>
+    <string name="Createcourse">Create New Course</string>
+    <string name="submit">Create</string>
 </resources>
