--- a/part2/part2/app/src/main/res/values/strings.xml
+++ b/part2/part2/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="name">Name</string>
     <string name="Createcourse">Create New Course</string>
     <string name="submit">Create</string>
+    <string name="hint3">Dr. Kehinde</string>
+    <string name="hint1">e.g. CO2124</string>
+    <string name="hint2">Software Architecture II</string>
+    <string name="invalid_course_code">Invalid course code (e.g., AB1234)</string>
+    <string name="all_fields_required">All fields are required</string>
+    <string name="title_create_course">Create a New Course</string>
 </resources>
