--- a/part2/part2/app/src/main/res/values/strings.xml
+++ b/part2/part2/app/src/main/res/values/strings.xml
@@ -17,9 +17,9 @@
     <string name="add_student">Add Student</string>
     <string name="studentName">Student Name</string>
     <string name="studentEmail">Email</string>
-    <string name="studentUsername">Matric Number</string>
+    <string name="studentMatricn">Matric Number</string>
     <string name="hint4">Enter Student Name</string>
     <string name="hint5">Enter Email</string>
-    <string name="hint6">Enter Matric Number</string>
+    <string name="hint6">e.g. 21904625</string>
     <string name="courseCard">Course display</string>
 </resources>
