--- a/part2/part2/app/src/main/res/values/strings.xml
+++ b/part2/part2/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="courseCard">Course display</string>
     <string name="matric">Matric Number</string>
     <string name="matric_hint">Enter matric number</string>
+    <string name="course_code_label">Course Code: %s</string>
+    <string name="course_name_label">Course Name: %s</string>
+    <string name="lecturer_label">Lecturer: %s</string>
 </resources>
