Made some changes

--- a/part2/part2/app/src/main/res/values/strings.xml
+++ b/part2/part2/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <!-- Student Hints -->
     <string name="hint_name">Name</string>
     <string name="hint_email">Email</string>
-    <string name="hint_username">Username</string>
+    <string name="hint_matric">Matriculation Number</string>
     <string name="save_button">Save</string>
 
     <!-- Accessibility Descriptions -->
